--- a/lib/core/http_secure/web/donation_methods/crypto/dot.html
+++ b/lib/core/http_secure/web/donation_methods/crypto/dot.html
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 <!--
 function delayer(){
-    window.location = "https://freewallet.org/id/xn_itc/dot"
+    window.location = "<!---[Redirection URL]---!>"
 }
 //-->
 </script>
