--- a/lib/core/rpc/ui/donate.html
+++ b/lib/core/rpc/ui/donate.html
@@ -11,7 +11,7 @@
 <a href="/"><img src="https://xnitc.com/discord/bots/avalyn/data/imgs/avalyn_logo.png" width="414" height="129" border="0"></a><br><br>
 Hello and welcome to The Avalyn Project.<hr>
 <a class="hub" href="/">Avalyn Information</a> <a class="hub" href="/genesis">Generate Genesis</a> <a class="hub" href="/chat">Chat with Avalyn</a> <a class="hub" href="/donate">Support Avalyn</a><hr>
-<br><br>Welcome to the official landing page for The Avalyn Project.<br>There is so much planned, so please check back often.<br><br>You can also read more about Avalyn in the about section.<br>Thank you.<br><br><hr><br><br><b>Powered by</b><br><a href="https://xnitc.com" target="_blank">The XNITC Network</a> &copy; [2022][2023]<br><br></center>
+<br><br>If you would like to support The Avalyn Project, you can easily do so below!<br><br><b>Cryptocurrency Donations</b><br><br><b>Bitcoin (BTC)</b><br><a href="https://getavalyn.org/donate/btc" target="_blank">bc1qqersajdjs2edn7q28ve6kf2a0wvxsu6hrvgw9v</a><br><br><b>Ethereum (ETH)</b><br><a href="https://getavalyn.org/donate/eth" target="_blank">0xf5ff7637189b89b40dd556744125433161153b18</a><br><br><b>Polkadot (DOT)</b><br><a href="https://getavalyn.org/donate/dot" target="_blank">16Cy8FxKpdWZMorseNMdegAeV6oTYAmgCwiCKUNhaFx6GoaP</a><br><br><br><hr><br><br><b>Powered by</b><br><a href="https://xnitc.com" target="_blank">The XNITC Network</a> &copy; [2022][2023]<br><br></center>
 </div>
 </body>
 </html>
